Refine startup exception handling implementation