@@ -16,9 +16,7 @@
 
 package org.springframework.boot;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -53,7 +51,7 @@ public class DefaultApplicationArguments implements ApplicationArguments {
 	@Override
 	public Set<String> getOptionNames() {
 		String[] names = this.source.getPropertyNames();
-		return Collections.unmodifiableSet(new HashSet<>(Arrays.asList(names)));
+		return Set.of(names);
 	}
 
 	@Override
